[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustgraph-base"
dynamic = ["version"]
authors = [{name = "trustgraph.ai", email = "security@trustgraph.ai"}]
description = "TrustGraph provides a means to run a pipeline of flexible AI processing components in a flexible means to achieve a processing pipeline."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pulsar-client",
    "prometheus-client",
    "requests",
    "python-logging-loki",
    "pika",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/trustgraph-ai/trustgraph"

[project.scripts]
processor-group = "trustgraph.base.processor_group:run"

[tool.setuptools.packages.find]
include = ["trustgraph*"]

[tool.setuptools.package-data]
"trustgraph.i18n.packs" = ["*.json"]

[tool.setuptools.dynamic]
version = {attr = "trustgraph.base_version.__version__"}