[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustgraph-embeddings-hf"
dynamic = ["version"]
authors = [{name = "trustgraph.ai", email = "security@trustgraph.ai"}]
description = "HuggingFace embeddings support for TrustGraph."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "trustgraph-base>=1.8,<1.9",
    "trustgraph-flow>=1.8,<1.9",
    "torch",
    "urllib3",
    "transformers",
    "sentence-transformers",
    "langchain",
    "langchain-core",
    "langchain-huggingface",
    "langchain-community",
    "huggingface-hub",
    "pulsar-client",
    "pyyaml",
    "prometheus-client",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/trustgraph-ai/trustgraph"

[project.scripts]
embeddings-hf = "trustgraph.embeddings.hf:run"

[tool.setuptools.packages.find]
include = ["trustgraph*"]

[tool.setuptools.dynamic]
version = {attr = "trustgraph.embeddings_hf_version.__version__"}